test/compile_error/redefined.conf.5.def
config redefined_conf {
	enum foo_t { foo, bar, baz }
	foo : int;
}
